# YOLOv5-ncnn-OpenVINO-MNN-ONNXRuntime-OpenCV-CPP

./: CMakeLists.txt  Config.json  LICENSE  README.md
include/: camera_handler.hpp
include/detectors/: base_detector.hpp  cv_detector.hpp  mnn_detector.hpp  ncnn_detector.hpp  ort_detector.hpp  ov_detector.hpp
models/OpenVINO/: yolov5n.xml  yolov5s.xml
models/ncnn/: yolov5n.param
src/: camera_handler.cpp  detect_camera.cpp  detect_image.cpp
src/detectors/: base_detector.cpp  cv_detector.cpp  mnn_detector.cpp  ncnn_detector.cpp  ort_detector.cpp  ov_detector.cpp
